force-app/main/default/objects/Committee__c/Committee__c.object-meta.xml
<CustomObject>
    <description>Admin-maintained list of board committees and subcommittees. A committee with a Parent Committee is a subcommittee. Members are linked per fiscal year via Committee Assignment. JSI-123 Board Tracking. Author: Jason Ott.</description>
    <label>Committee</label>
    <nameField>
        <label>Committee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Committees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>