force-app/main/default/objects/Committee__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <description>Only active committees are offered for new assignments and shown on dashboards. JSI-123 / Jason Ott.</description>
    <label>Active</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>