force-app/main/default/objects/Committee__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Board (standing) committee vs. a special-event committee (e.g. 50th Anniversary Steering Committee). JSI-123 / Jason Ott.</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Board Committee</fullName>
                <default>true</default>
                <label>Board Committee</label>
            </value>
            <value>
                <fullName>Special Event Committee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>