force-app/main/default/objects/Committee__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Optional purpose/charter note for the committee. JSI-123 / Jason Ott.</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>