force-app/main/default/objects/Committee__c/fields/Is_Executive_Committee__c.field-meta.xml
<CustomField>
    <fullName>Is_Executive_Committee__c</fullName>
    <description>TRUE for the Executive Committee. Any member of the Executive Committee owes the elevated $10k annual commitment (same as a committee chair/co-chair). JSI-123 / Jason Ott.</description>
    <label>Is Executive Committee</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>