force-app/main/default/objects/Committee__c/fields/Parent_Committee__c.field-meta.xml
<CustomField>
    <fullName>Parent_Committee__c</fullName>
    <description>If set, this row is a subcommittee of the referenced committee. Blank = a top-level committee. JSI-123 / Jason Ott.</description>
    <label>Parent Committee</label>
    <referenceTo>Committee__c</referenceTo>
    <relationshipLabel>Subcommittees</relationshipLabel>
    <relationshipName>Subcommittees</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>