force-app/main/default/objects/Committee__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Derived: "Subcommittee" when a Parent Committee is set, otherwise "Committee". JSI-123 / Jason Ott.</description>
    <formula>IF(ISBLANK(Parent_Committee__c), "Committee", "Subcommittee")</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>